# embedder

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
src/: api.rs  embedder.rs  main.rs  ollama.rs
