[package]
name = "embedder"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
ahash = "0.8.11"
anyhow = "1.0.91"
env_logger = "0.11.5"
envy = "=0.4.2"
log = "0.4.22"
qdrant-client = "1.12.1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokenizers = { version = "0.20.1", features = ["http"] }
tokio = { version = "1.41.0", features = ["full"] }

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]
